Laid more of the foundation for development.
Created structures for the game state and the aliens.
Created a new header for rendering with some generic functions (potentially port to not use terminal for graphics?)
Created the skeletons for some super major functions.

Signed-off-by: Koen Komeya <kxk2610@rit.edu>

--- a/SpaceGame.uvprojx
+++ b/SpaceGame.uvprojx
@@ -410,6 +410,11 @@
               <FileType>5</FileType>
               <FilePath>.\UART0CharIO.h</FilePath>
             </File>
+            <File>
+              <FileName>SGRender.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\SGRender.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
