Started work on an EnableClock assembly subroutine to initialize the LPTMR0 to tick the game. Created prelimary Touch Driver files. Fixed a potential bug and added some relevant info to UART0CharIO.s.
Signed-off-by: Koen Komeya <kxk2610@rit.edu>

--- a/SpaceGame.uvprojx
+++ b/SpaceGame.uvprojx
@@ -415,6 +415,16 @@
               <FileType>5</FileType>
               <FilePath>.\SGRender.h</FilePath>
             </File>
+            <File>
+              <FileName>TouchDriver.s</FileName>
+              <FileType>2</FileType>
+              <FilePath>.\TouchDriver.s</FilePath>
+            </File>
+            <File>
+              <FileName>TouchDriver.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\TouchDriver.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
